--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         
         <script>
             const loginURL = `https://secure.meetup.com/oauth2/authorize
-    ?client_id=YOUR_CONSUMER_KEY
+    ?client_id=df773ak352f6trntvjgsvrg3n5
     &response_type=code
-    &redirect_uri=YOUR_CONSUMER_REDIRECT_URI`;
+    &redirect_uri=https://guardiannw.github.io/test-meetup-api/index.html`;
 
     const url = window.location.href;
     const regex = /(?:\?|&)(?:([a-zA-Z_]+)=([^&]+))*/g;
