--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
     <body>
         
         <script>
-            const loginURL = `https://secure.meetup.com/oauth2/authorize
-    ?client_id=df773ak352f6trntvjgsvrg3n5
-    &response_type=code
-    &redirect_uri=https://guardiannw.github.io/test-meetup-api/index.html`;
+            const loginURL = `https://secure.meetup.com/oauth2/authorize?client_id=df773ak352f6trntvjgsvrg3n5&response_type=code&redirect_uri=https://guardiannw.github.io/test-meetup-api/index.html`;
 
     const url = window.location.href;
     const regex = /(?:\?|&)(?:([a-zA-Z_]+)=([^&]+))*/g;
