--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             const loginURL = `https://secure.meetup.com/oauth2/authorize?client_id=df773ak352f6trntvjgsvrg3n5&response_type=token&redirect_uri=https://guardiannw.github.io/test-meetup-api/index.html`;
 
     const url = window.location.href;
-    const regex = /(?:\?|&)(?:([a-zA-Z_]+)=([^&]+))*/g;
+    const regex = /(?:#|\?|&)(?:([a-zA-Z_]+)=([^&]+))*/g;
     let matcher;
     let queryParams = {};
 
